# ChangeLog for net-misc/l2tpd
# Copyright 2003 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/net-misc/l2tpd/Attic/ChangeLog,v 1.3 2003/07/08 04:35:37 woodchip Exp $

*l2tpd-0.69 (24 Feb 2003)

  24 Feb 2003; Donny Davies <woodchip@gentoo.org> :
  Initial import, created by me.