@@ -1,4 +1,4 @@
-MD5 85b7261a6d31b17846b3b711707feb0c ChangeLog 316
-MD5 128050f20b4318e401d9d22261b3af9c l2tpd-0.69.ebuild 1558
+MD5 c5cfbba43498ead2b14eb285e626109a ChangeLog 402
+MD5 60a8b23c1444b5b6c72be29efd6dfc0d l2tpd-0.69.ebuild 1564
 MD5 d6a701a4f443b06067841f3f72714b00 files/digest-l2tpd-0.69 131
 MD5 daabc665d740579405c1922c734392ee files/l2tpd-init 383
