@@ -1,11 +1,11 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/l2tpd/Attic/l2tpd-0.69.ebuild,v 1.2 2003/06/12 21:36:23 msterret Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/l2tpd/Attic/l2tpd-0.69.ebuild,v 1.3 2003/07/11 03:58:09 woodchip Exp $
 
 DESCRIPTION="Layer 2 Tunnelling Protocol Daemon"
 HOMEPAGE="http://www.l2tpd.org/"
-SRC_URI="http://www.l2tpd.org/downloads/${P}.tar.gz
-	http://www.jacco2.dds.nl/networking/freeswanl2tpconfig-1.1.tgz"
+SRC_URI="http://www.l2tpd.org/downloads/${P}.tar.gz"
+#	http://www.jacco2.dds.nl/networking/freeswanl2tpconfig-1.1.tgz"
 DEPEND="virtual/glibc"
 LICENSE="GPL-2"
 KEYWORDS="~x86"
@@ -40,10 +40,10 @@ src_install() {
 
 	dodoc BUGS CHANGELOG LICENSE CREDITS README TODO \
 		doc/rfc2661.txt doc/*.sample
-	cp -a ../freeswanl2tpconfig ${D}/usr/share/doc/${PF}
-	chown -R root.root ${D}/usr/share/doc/${PF}
-	mv ${D}/usr/share/doc/${PF}/freeswanl2tpconfig \
-		${D}/usr/share/doc/${PF}/samples
+	#cp -a ../freeswanl2tpconfig ${D}/usr/share/doc/${PF}
+	#chown -R root.root ${D}/usr/share/doc/${PF}
+	#mv ${D}/usr/share/doc/${PF}/freeswanl2tpconfig \
+	#	${D}/usr/share/doc/${PF}/samples
 
 	insinto /etc/l2tpd
 	newins doc/l2tp-secrets.sample l2tp-secrets
