@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/l2tpd
 # Copyright 2003 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/l2tpd/Attic/ChangeLog,v 1.3 2003/07/08 04:35:37 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/l2tpd/Attic/ChangeLog,v 1.4 2003/07/11 03:58:09 woodchip Exp $
+
+  10 Jul 2003; Donny Davies <woodchip@gentoo.org> l2tpd-0.69.ebuild:
+  Close #23945.
 
 *l2tpd-0.69 (24 Feb 2003)
 
